--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@
                 </p>
                 <img src="carloacutis.webp" alt="Carlo Acutis" id="carlo">
                 <img src="carloacutis2.jpeg" alt="Carlo Acutis" id="carlo2">
+                <img src="carloacutis3.jpeg" alt="Carlo Acutis" id="carlo3">
             </div>
 </body>
 </html>
