--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                     São Carlos Acutis foi canonizado em 07/09/2025, tornando-se oficialmente um santo da Igreja Católica. Sua canonização é um testemunho de sua vida exemplar e de seu impacto duradouro na fé católica.
                 </p>
                 <p class="p1">
-                    Carlo Acutis é frequentemente lembrado como um modelo de santidade para os jovens, mostrando que é possível viver uma vida santa mesmo em meio às distrações e desafios do mundo moderno.
+                    São Carlos Acutis é frequentemente lembrado como um modelo de santidade para os jovens, mostrando que é possível viver uma vida santa mesmo em meio às distrações e desafios do mundo moderno.
                 </p>
                 <img src="carloacutis.webp" alt="Carlo Acutis" id="carlo">
                 <img src="carloacutis2.jpeg" alt="Carlo Acutis" id="carlo2">
