--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" text="text/css" href="estilo.css">
-        <link rel="shortcut icon" href="saocarlosacutis.png" type="image/x-icon">
+    <link rel="stylesheet" text="text/css" href="css/estilo.css">
+    <link rel="shortcut icon" href="imagens/saocarlosacutis.png" type="image/x-icon">
     <title>Grupo de Jovens - São Carlo Acutis! </title>
 </head>
     <div id="container-central">
@@ -22,7 +22,7 @@
                 <a href="https://www.google.com/maps/place/Catholica+Domus/@-29.1697288,-51.1795927,17z/data=!3m1!4b1!4m6!3m5!1s0x951ea32d4b0f676d:0x5b43206941eede9a!8m2!3d-29.1697288!4d-51.1795927!16s%2Fg%2F11fy4fkx1h?entry=ttu&g_ep=EgoyMDI1MDYxNy4wIKXMDSoASAFQAw%3D%3D"> Na Catholica Domus, Rua Os Dezoito do Forte, 1809;</a>
                 </p>
             </div>
-                <img src="saocarlosacutis_principal.png" alt="Imagem de São Carlo Acutis" width="288" height="321.5">
+                <img src="imagens/saocarlosacutis_principal.png" alt="Imagem de São Carlo Acutis" width="288" height="321.5">
         </div>
         <div id="bloco">
             <div id="caixa_texto_2">
@@ -31,7 +31,7 @@
                 <p> Vanessa: <a href="https://wa.me/555496003235">55 54 9600-3235</a> </p>
                 <p> Instagram do grupo: <a href="https://www.instagram.com/carloacutis_cxs/">@carloacutis_cxs</a> </p>
             </div>
-                <img src="santateresa.png" alt="logo_catedral_santa_teresa" height="150" width="550"> 
+                <img src="imagens/santateresa.png" alt="logo_catedral_santa_teresa" height="150" width="550"> 
         </div>
         <hr>
         <div id="bloco">
@@ -115,9 +115,9 @@
                 <p class="p1">
                     São Carlos Acutis é frequentemente lembrado como um modelo de santidade para os jovens, mostrando que é possível viver uma vida santa mesmo em meio às distrações e desafios do mundo moderno.
                 </p>
-                <img src="carloacutis.webp" alt="Carlo Acutis" id="carlo">
-                <img src="carloacutis2.jpeg" alt="Carlo Acutis" id="carlo2">
-                <img src="carloacutis3.jpeg" alt="Carlo Acutis" id="carlo3">
+                <img src="imagens/carloacutis.webp" alt="Carlo Acutis" id="carlo">
+                <img src="imagens/carloacutis2.jpeg" alt="Carlo Acutis" id="carlo2">
+                <img src="imagens/carloacutis3.jpeg" alt="Carlo Acutis" id="carlo3">
             </div>
 </body>
 </html>
